# Tien

./: README.md  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/androidTest/java/com/tien/core/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/core/: Course.h  Models.h
app/src/main/cpp/db/: DatabaseManager.cpp  DatabaseManager.h
app/src/main/cpp/jni/: native-lib.cpp
app/src/main/cpp/utils/: Logger.h
app/src/main/java/com/tien/core/: MainActivity.kt  NativeLib.kt
app/src/main/java/com/tien/core/model/: Note.kt  TaskItem.kt
app/src/main/java/com/tien/core/ui/: AddNoteSheet.kt  AddTaskSheet.kt  NoteCard.kt  NotesScreen.kt  TaskCard.kt
app/src/main/java/com/tien/core/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/tien/core/viewmodel/: NotesViewModel.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tien/core/: ExampleUnitTest.kt
docs/: fondo.js  index.html  script.js  styles.css
docs/css/: style.css
docs/js/: app.js  bg-shader.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
